# pyloanbank

./: .gitignore  README.md  pyproject.toml
src/pyloanbank/: __init__.py  dataset.py  glove.py  partial_cognacy.py  sibling_module.py  wordvector_gloss.py
tests/: test_partial_cognacy.py
