[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyloanbank"
version = "0.1.0"
description = "Shared CLDFbench wiring for Loanwordbank datasets"
requires-python = ">=3.11"
dependencies = [
    "cldfbench>=1.14",
]

[tool.setuptools.packages.find]
where = ["src"]
